# Rectangle-Intersection

NitroCppTest-MiguelMacedo/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
NitroCppTest-MiguelMacedo/cmake/: dev-mode.cmake  docs-ci.cmake  install-rules.cmake  variables.cmake
NitroCppTest-MiguelMacedo/include/: JsonHelper.hpp  Rectangle.hpp  RectangleIntersection.hpp
NitroCppTest-MiguelMacedo/src/: JsonHelper.cpp  Rectangle.cpp  RectangleIntersection.cpp  main.cpp
NitroCppTest-MiguelMacedo/test/: CMakeLists.txt
NitroCppTest-MiguelMacedo/test/examples/: test3.json  test4.json
NitroCppTest-MiguelMacedo/test/source/: JsonHelperTest.cpp  RectangleIntersectionTest.cpp  RectangleTest.cpp
NitroCppTest-MiguelMacedo/test/utilities/: Comparisons.cpp  TestingHelper.hpp
